Extend tools task to use bal tools